# tn-proto

./: .code-health-budget.json  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DX_FIXES.md  LICENSE  Makefile  README.md  build_wheels.sh  clippy.toml  dev.ps1  llms.txt  noxfile.py
crypto/tn-bbg/: Cargo.toml
crypto/tn-bbg/src/: codec.rs  encrypt.rs  error.rs  identity.rs  kem.rs  key.rs  lib.rs  params.rs  seal.rs
crypto/tn-bbg/tests/: hardening.rs  interop.rs
crypto/tn-btn/: Cargo.toml  README.md
crypto/tn-btn-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crypto/tn-btn-py/examples/: bench_4kits.py  bench_full_tn_4kb.h8.results.txt  bench_full_tn_4kb.py  bench_full_tn_4kb.results.txt  bench_instrument.h8.results.txt  bench_instrument.py  bench_pipeline_rust.py  bench_pipeline_rust.results.txt  bench_vs_jwe_bgw.py  bench_vs_jwe_bgw.results.txt  python_stress.py
crypto/tn-btn-py/src/: lib.rs  pipeline.rs
crypto/tn-btn-py/tests/: test_btn.py  test_runtime.py
crypto/tn-btn/benches/: btn_bench.rs
crypto/tn-btn/examples/: stress.rs
crypto/tn-btn/src/: ciphertext.rs  config.rs  error.rs  lib.rs  publisher.rs  reader.rs  rotate.rs  wire.rs
crypto/tn-btn/tests/: six_verbs_tour.rs
crypto/tn-core/: Cargo.toml  README.md
crypto/tn-core-ffi/: Cargo.toml
crypto/tn-core-ffi/src/: lib.rs
crypto/tn-core-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crypto/tn-core-py/src/: admin.rs  lib.rs
crypto/tn-core/benches/: pipeline.rs
crypto/tn-core/src/: admin_cache.rs  admin_catalog.rs  admin_reduce.rs  agents_policy.rs  body_encryption.rs  canonical.rs  chain.rs  classifier.rs  config.rs  did_document.rs  envelope.rs  error.rs  identity.rs  indexing.rs  jwe_binding.rs  keystore_backend.rs  lib.rs  log_file.rs  panic_guard.rs  path_template.rs  pathutil.rs  perf.rs  read_as_recipient.rs  recipient_seal.rs  runtime.rs  runtime_export.rs  sealed_object.rs  signing.rs  storage.rs  tnpkg.rs  trust.rs  trusted_enrollment.rs  unsafe_operation.rs
crypto/tn-core/tests/: admin_add_agent_runtime.rs  admin_cache.rs  admin_catalog_tests.rs  admin_reduce_tests.rs  admin_replay.rs  agents_group.rs  body_encryption_contract.rs  canonical_golden.rs  chain_gating.rs  chain_golden.rs  cipher_btn.rs  cipher_jwe.rs  cli_e2e.rs  config_env_vars.rs  config_parse.rs  did_key_agreement.rs  envelope_golden.rs  event_id_template.rs  extends_loader.rs  handlers_emit_fan_out.rs  handlers_fs_drop.rs  handlers_fs_scan.rs  handlers_vault_pull.rs  handlers_vault_push.rs  (+31 more)
crypto/tn-hibe/: Cargo.toml
crypto/tn-hibe-py/: Cargo.toml
crypto/tn-py/: Cargo.toml  README.md
crypto/tn-wasm/: .gitignore  Cargo.toml  README.md
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml
python/bench/: _show_inv.py  bench_envelope_vs_plaintext.py  bench_indexing.py  bench_tncrypto_vs_mclbn.py  results_envelope_vs_plaintext.json
python/docs/: env-schema.md
python/examples/: README.md  _capture_for_docs.py  bench_1kb_breakdown.py  bench_1kb_breakdown.results.md  bench_file_isolate.py  bench_info_read.py  bench_info_read.results.md  bench_signing_cost.py  bench_signing_cost.results.md  demo_revocation.py  ex01_hello.py  ex02_reading.py  ex03_groups.py  ex05_rotate.py  ex06_multi_handler.py  ex07_context.py  ex08_stdout.py
python/scenarios/: __init__.py  __main__.py
python/scripts/: build_test_ceremony.py  live_consistency_check.py  round_trip_smoke.py
python/tests/: _admin_audit.py  _chain_persistence_probe.py  conftest.py  demo_hibe_primitives.py  demo_hibe_walkthrough.py  demo_jwe_cipher.py  run_all.sh  run_cipher_sweep.py  run_wsl.sh  test_0_4_2a9_regression.py  test_absorb.py  test_absorb_equivocation.py  test_absorb_received_kit_post.py  test_absorb_vault_adoption_contract.py  test_account_connect_cascade.py  test_account_sync_full_live.py  test_admin_add_agent_runtime.py  test_admin_and_log.py  test_admin_auto_compile.py  test_admin_catalog_py.py  test_admin_log.py  test_admin_log_routing.py  test_admin_pending.py  test_admin_revoke_no_epoch_bump.py  test_admin_rust.py  test_admin_state.py  test_admin_state_cache.py  test_admin_unified_api.py  test_agents_group.py  test_agents_policy_accessor.py  test_agents_policy_published.py  test_atexit_flush.py  test_atomic_write.py  test_autoinit.py  test_autoinit_layout.py  test_awk_pickup.py  test_awk_pickup_token_reuse.py  test_body_encryption_zip.py  test_bootstrap_no_prewrite.py  test_bootstrap_user_agent.py  (+194 more)
python/tn/: __init__.py  __main__.py  _agents_policy.py  _autoinit.py  _bounded_json.py  _cache_policy.py  _defaults.py  _dispatch.py  _entry.py  _handle.py  _hibe.py  _init_attach.py  _keystore_backend.py  _layout.py  _log_targets.py  _multi.py  _perf.py  _pkg_impl.py  _profiles.py  _pytest_fixtures.py  _read_impl.py  _registry.py  _session.py  _session_impl.py  _vault_impl.py  _watch_impl.py  absorb.py  auth.py  awk_pickup.py  bootstrap.py  btn.py  btn_keystore.py  canonical.py  chain.py  cipher.py  claim.py  classifier.py  cli.py  cli_admin.py  cli_auth.py  (+58 more)
python/tools/: __init__.py  gen_sealed_object_vectors.py  generate_absorb_vault_adoption_fixture.py  generate_recipient_wrap_fixture.py  generate_rust_fixtures.py  generate_vault_normalize_fixture.py  perf_e2e.py
rust-sdk/: Cargo.toml  README.md  SDK_REFERENCE.md
rust-sdk/examples/: admin_group.rs  hello.rs  invite.rs  package.rs  read.rs  revocation.rs  vault_claim.rs  vault_passphrase.rs  watch.rs
rust-sdk/src/: account.rs  admin.rs  btn.rs  credential_store.rs  enrollment.rs  entry.rs  error.rs  identity.rs  inbox.rs  jwe.rs  lib.rs  pkg.rs  read_trust.rs  security_warning.rs  tn.rs  vault.rs  wallet.rs  watch.rs
rust-sdk/tests/: account.rs  admin.rs  btn_primitives.rs  cli.rs  credential_store.rs  hibe_trusted_authority.rs  identity.rs  inbox.rs  interop_python.rs  interop_typescript.rs  jwe_direct_preparation.rs  jwe_local_send.rs  jwe_primitives.rs  jwe_public_preparation.rs  jwe_trusted_enrollment.rs  pkg.rs  privacy.rs  seal_unseal.rs  secure_default_read.rs  smoke.rs  trusted_enrollment.rs  vault.rs  vault_live.rs  verify.rs  wallet.rs  watch.rs
(+1185 files in other folders)
