[workspace]
resolver = "2"
members = [
    # tn-bbg: our own Apache-2.0/MIT BBG HIBE scheme on BLS12-381. It
    # replaced the vendored LGPL `hohibe` (now deleted); tn-hibe re-exports
    # it, so the whole tree is permissively licensed.
    "crypto/tn-bbg",
    "crypto/tn-btn",
    "crypto/tn-btn-py",
    "crypto/tn-core",
    "crypto/tn-core-ffi",
    "crypto/tn-core-py",
    "crypto/tn-hibe",
    "crypto/tn-hibe-py",
    "crypto/tn-py",
    "crypto/tn-wasm",
    "rust-sdk",
]

[workspace.package]
edition = "2021"
# MSRV is a FLOOR, not a pin. CI runs on `dtolnay/rust-toolchain@stable`
# so we always build against current stable; this line declares the
# oldest Rust we're willing to support. Bumped from 1.75 -> 1.85 to
# pick up `std::sync::LazyLock`/`LazyCell` (1.80), stabilized async
# closures and the Rust 2024 edition (1.85). Current stable at the
# time of writing is 1.94 — keeps a ~9-month safety margin so this
# floor is something a downstream consumer can realistically hit.
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
ed25519-dalek = { version = "2", features = ["fast"] }
subtle = "2.6"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "1"
hex = "0.4"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[profile.release]
lto = true
codegen-units = 1
