[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
# One combined wheel: the pure-Python `tn` package (python-source ".") plus
# the `tn._native` extension built from the umbrella crate at
# crypto/tn-py, which links the core, btn, and hibe bindings as
# `core`, `btn`, and `hibe` submodules. abi3-py39, so one wheel per platform.
module-name = "tn._native"
python-source = "."
manifest-path = "../crypto/tn-py/Cargo.toml"
include = ["tn/py.typed", "tn/mcp/exhaust/kits_index.json"]
# Keep docs out of the runtime wheel: markdown that lives inside the
# package tree (e.g. tn/lint/README.md) is developer documentation, not
# shipped code. The project README is still embedded as wheel METADATA
# via [project].readme — this only drops in-package .md files.
exclude = ["tn/**/*.md"]

[project]
name            = "tn-proto"
version         = "0.6.11"
description     = "TN protocol: attested logging with the btn broadcast cipher"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "Apache-2.0" }
authors         = [{ name = "cyaxios contributors", email = "dev@cyaxios.com" }]
keywords        = ["cryptography", "broadcast-encryption", "attestation", "audit-log"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "PyYAML>=6.0",
    "cryptography>=41.0",
    # RFC 7516 JWE for `cipher: jwe` groups. joserfc (Authlib's standalone
    # JOSE library) is BSD-3-Clause and built on `cryptography`; it produces
    # standards-compliant General JSON Serialization that interoperates with
    # the TS SDK's panva/jose. See docs/JWE-cipher-spec.md.
    "joserfc>=1.0",
    "typing_extensions>=4.0",
    # Handler infrastructure
    "persist-queue>=1.0",       # durable outbox for async handlers
    "pathvalidate>=3.0",        # cross-platform path sanitization
    # Identity + wallet-link story is in the core SDK (tn/identity.py,
    # tn/vault_client.py are imported at tn init time). These are small
    # pure-Python deps; bundling them in core keeps `import tn` clean.
    "mnemonic>=0.21",           # BIP-39 recovery phrase
    "httpx>=0.27",              # vault_client HTTP
    "mcp>=1.0",                 # Model Context Protocol SDK (tn-mcp-server)
    "base58>=2.1",              # did:key / base58 encoding
    # libsodium bindings used for the Ed25519 -> X25519 key derivation in
    # tn.recipient_seal (sealed-box recipient wrap on encrypted
    # kit_bundles). The cryptography library doesn't expose curve point
    # arithmetic; pynacl is the right primitive here.
    "pynacl>=1.5",
    # tn._entry.Entry is a pydantic BaseModel. Historically this came in
    # transitively via mcp; declare explicitly so the install works in
    # any environment, including when mcp moves to an extra in tn-proto.
    "pydantic>=2",
    # The Rust runtime (former tn-core + tn-btn wheels) is now compiled
    # directly into this wheel as the `tn._native` extension — no separate
    # tn-core / tn-btn PyPI dependencies. See [tool.maturin] below.
]

[project.optional-dependencies]
# Installed on demand; keep the base wheel lean.
kafka    = ["confluent-kafka>=2.3"]
delta    = ["databricks-sql-connector>=3.0", "databricks-sdk>=0.20"]
s3       = ["boto3>=1.34"]
firehose = ["websocket-client>=1.7"]
# Template mining for the exhaust MCP tools (tn.mcp.exhaust). The code path
# degrades gracefully when drain3 is absent (it returns a "pip install
# drain3" hint — see tn/mcp/exhaust/stages.py), so this is opt-in rather than
# a base dep. drain3 is sdist-only on PyPI and hard-pins old jsonpickle /
# cachetools, so keeping it out of the base install avoids a per-install
# source build and dependency conflicts for the 99% who never touch exhaust.
exhaust  = ["drain3>=0.9"]
# Test runner + coverage. Required to run `pytest tn/lint/tests/` and the
# `--cov=tn` invocation declared in [tool.coverage.run] below.
test     = ["pytest>=7", "pytest-cov>=4"]
# Everything at once (for dev / CI).
all      = [
    "confluent-kafka>=2.3",
    "databricks-sql-connector>=3.0",
    "databricks-sdk>=0.20",
    "boto3>=1.34",
    "websocket-client>=1.7",
    "drain3>=0.9",
    "pytest>=7",
    "pytest-cov>=4",
]

[project.urls]
Homepage   = "https://github.com/cyaxios/tn-proto"
Repository = "https://github.com/cyaxios/tn-proto"
Issues     = "https://github.com/cyaxios/tn-proto/issues"
Changelog  = "https://github.com/cyaxios/tn-proto/blob/main/CHANGELOG.md"

[project.scripts]
# The top-level CLI. Use as `tn rotate`, `tn init`, `tn bundle`, etc. —
# the docstring at python/tn/cli.py lists every verb. Pre-0.4.0a4 this
# script wasn't installed and users had to run `python -m tn.cli ...`.
tn            = "tn.cli:main"
tn-mcp-server = "tn.mcp:main"

# ---------------------------------------------------------------------------
# Pure-Python wheel. The Rust-backed cipher + runtime extensions (btn,
# tn_core) are their own maturin-built wheels shipped separately; see
# ../crypto/btn-py/pyproject.toml and ../crypto/tn-core-py/pyproject.toml.
# Workstream G (2026-04-24) consolidated distribution to this three-wheel
# model so consumers get `pip install tn-proto` and the install pulls
# all three pieces without any C toolchain / OpenSSL / vcpkg setup.
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where   = ["."]
include = ["tn*"]
exclude = ["tests*", "tools*", "scenarios*", "examples*", "bench*", "docs*", "tn.*.tests", "tn.*.tests.*"]

[tool.setuptools.package-data]
tn = ["py.typed", "mcp/exhaust/kits_index.json"]

# ---------------------------------------------------------------------------
# Lint / format / type-check config.
# ---------------------------------------------------------------------------

[tool.ruff]
# Default line length from black; prettier-compatible.
line-length = 100
target-version = "py310"
extend-exclude = [
    "build",
    "tools/tn_annotate",          # vendored tool + harvested corpus (~14k files); not ours
    "docs/agent-prompts",         # LLM evaluation samples (intentional undefined refs)
    "stage-personas-workspace",   # runtime state
]

[tool.ruff.lint]
# Opinionated but practical. "E,F,W" = pyflakes + pycodestyle baseline.
# "I" = import sorting (replaces isort). "B" = bugbear (real bug patterns).
# "UP" = pyupgrade (modernize syntax). "RUF" = ruff's own rules.
# Add "ANN" for type-annotations-required once mypy is clean.
select = ["E", "F", "W", "I", "B", "UP", "RUF", "S101", "BLE001", "E722"]
ignore = [
    "E501",   # Line too long — delegate to the formatter.
    "B008",   # Function calls in arg defaults — pydantic/fastapi-style APIs use this.
    "RUF012", # Mutable class attrs without ClassVar — common and harmless here.
    "RUF001", # Ambiguous chars in strings  — intentional typography.
    "RUF002", # Ambiguous chars in docstrings — same.
    "RUF003", # Ambiguous chars in comments — same.
    "RUF015", # Prefer next(iter()) over [0] — pedantic, slice is clear enough.
    "RUF043", # Regex metacharacters in pytest.raises match= — tests-only concern.
    "RUF046", # Useless int cast on int value — pedantic.
    "RUF059", # Unused destructured var — often clearer to keep the name.
]

[tool.ruff.lint.per-file-ignores]
# Tests + examples + scripts use `sys.path.insert(...)` + late imports and
# condensed import groups as a matter of course. Opt out of those specific
# nits there rather than fighting the pattern.
"tests/**"     = ["B", "E402", "E702", "E701", "E741", "S101", "BLE001", "E722"]
# In-package test suites (e.g. tn/mcp/tests, tn/lint/tests) — same test conventions.
"**/tests/**"  = ["B", "E402", "E702", "E701", "E741", "S101", "E722", "I001"]
"examples/**"  = ["B", "E402", "E702", "E701", "S101", "BLE001"]
"scenarios/**" = ["B", "E402", "E702", "E701", "S101", "BLE001"]
"bench/**"     = ["B", "E402", "E702", "E701", "S101", "BLE001"]
"tools/**"     = ["E402", "S101", "BLE001"]
# cookbook contract test — uses asserts and broad except for friendly per-case reporting
"docs/_verify_cookbook.py" = ["S101", "BLE001", "E402", "B", "F841"]

[tool.ruff.format]
# Match black defaults. Keep this in lockstep with pyproject's line-length.
quote-style = "double"

[tool.mypy]
python_version = "3.10"
# Gradual typing: start permissive, tighten over time. See the remediation plan.
strict = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any is aggressive for a library that pulls typed values out of
# untyped JSON / dict payloads (envelopes, vault responses, PyO3 binding output).
# Turn back on once either the dict-sourced sites adopt TypedDict models or
# the individual returns gain explicit casts. Tracked in D6.
warn_return_any = false
no_implicit_optional = true
show_error_codes = true
files = ["tn"]
exclude = [
    "^build/",
    "^tools/tn_annotate/",
    "^tests/",          # tests untyped for now; tighten later.
    "^scenarios/",
]

[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "databricks.*",
    "boto3.*",
    "mnemonic.*",
    "base58.*",
    "persist_queue.*",
    # PyO3 native extension — built by maturin from crypto/tn-py/ (the
    # combined core + btn + hibe bindings, exposed as tn._native.core /
    # tn._native.btn / tn._native.hibe). Typing it properly means adding py.typed or
    # hand-written stubs, tracked in Workstream B/F. Until then mypy treats
    # it as Any at the import boundary.
    "tn._native",
    "tn._native.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Coverage — Workstream B4 (tn-proto/docs/sdk-parity.md).
# Tiered thresholds: crypto-adjacent code has the highest bar; the rollout
# floor (70%) is below the per-module targets so CI doesn't block on
# pre-existing gaps. Raise module-by-module as B1/B2/B3 land.
#
# Run:
#   pytest --cov=tn --cov-report=term-missing --cov-report=xml
# CI enforcement: wire the per-module floors into the pipeline; local
# runs print the report without failing so you can iterate quickly.
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["tn"]
# branch=false so coverage's `sysmon` core can be used (COVERAGE_CORE=sysmon).
# That core avoids the PyO3 double-init crash from the `cryptography` wheel.
# Re-enable branch coverage once the upstream wheel ships a PyO3 >=0.21 build.
branch = false
omit = [
    "tn/cli.py",                 # interactive CLI; covered by scenarios, not unit tests.
    "tn/handlers/kafka.py",      # live-service handlers deferred per plan (B1).
    "tn/handlers/delta.py",
    "tn/handlers/s3.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 70                  # rollout floor; raise as B1 modules land.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
