[package]
name = "tn-btn-py"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "Python bindings for tn-btn broadcast-transaction encryption."
license.workspace = true

[lib]
name = "tn_btn"
crate-type = ["cdylib"]

[dependencies]
tn-btn = { path = "../tn-btn" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
ed25519-dalek = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
