[package]
name = "tn-core-py"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python bindings for tn-core: btn-backed TN runtime."

[lib]
# Unique lib name (NOT `tn_core`): the core crate's lib is already
# `tn_core`, and with both compiled as rlibs in one graph a shared name
# collides (E0464). The Python module name is owned by the umbrella cdylib
# (`tn._native`), not this lib.
name = "tn_core_py"
# rlib: now a library consumed by the umbrella `tn-proto-native` crate
# (one combined extension). The extension-module feature is supplied by
# the final cdylib and unifies across the graph.
crate-type = ["rlib"]

[dependencies]
tn-core = { path = "../tn-core" }
pyo3 = { version = "0.24", features = ["abi3-py39"] }
serde_json = { workspace = true }
base64 = { workspace = true }
