[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tn-core"
version = "0.2.0a1"
description = "Rust-backed TN runtime (PyO3)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0 OR MIT" }
authors = [{ name = "cyaxios contributors", email = "dev@cyaxios.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/cyaxios/tn-proto"
Repository = "https://github.com/cyaxios/tn-proto"
Issues = "https://github.com/cyaxios/tn-proto/issues"

[tool.maturin]
module-name = "tn_core._core"
features = ["pyo3/extension-module"]
python-source = "python"
